k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsa-app
  labels:
    app: rsa-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rsa-app
  template:
    metadata:
      labels:
        app: rsa-app
    spec:
      containers:
      - name: rsa-app
        image: astou233/rsa-app:latest
        ports:
        - containerPort: 8000
