k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsa-app-service
spec:
  selector:
    app: rsa-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30080
